--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,61 @@
   --animate-accordion-down: accordion-down 0.2s ease-out;
   --animate-accordion-up: accordion-up 0.2s ease-out;
 
+   /* TEKHELET */
+  --color-tekhelet-100: oklch(0.19 0.04 286.49);
+  --color-tekhelet-200: oklch(0.23 0.08 297.36);
+  --color-tekhelet-300: oklch(0.28 0.11 298.93);
+  --color-tekhelet-400: oklch(0.33 0.15 297.47);
+  --color-tekhelet-500: oklch(0.39 0.19 299.53);
+  --color-tekhelet-600: oklch(0.49 0.25 299.94);
+  --color-tekhelet-700: oklch(0.67 0.17 292.64);
+  --color-tekhelet-800: oklch(0.80 0.12 295.11);
+  --color-tekhelet-900: oklch(0.93 0.06 293.99);
+
+  /* MEDIUM SLATE BLUE */
+  --color-medium-slate-blue-100: oklch(0.15 0.09 289.41);
+  --color-medium-slate-blue-200: oklch(0.24 0.17 293.56);
+  --color-medium-slate-blue-300: oklch(0.33 0.24 297.11);
+  --color-medium-slate-blue-400: oklch(0.48 0.24 296.26);
+  --color-medium-slate-blue-500: oklch(0.68 0.19 292.41);
+  --color-medium-slate-blue-600: oklch(0.77 0.16 291.64);
+  --color-medium-slate-blue-700: oklch(0.85 0.12 292.34);
+  --color-medium-slate-blue-800: oklch(0.91 0.09 291.92);
+  --color-medium-slate-blue-900: oklch(0.97 0.05 291.85);
+
+  /* SELECTIVE YELLOW */
+  --color-selective-yellow-100: oklch(0.26 0.12 80.73);
+  --color-selective-yellow-200: oklch(0.42 0.21 81.01);
+  --color-selective-yellow-300: oklch(0.59 0.26 83.12);
+  --color-selective-yellow-400: oklch(0.75 0.27 84.10);
+  --color-selective-yellow-500: oklch(0.91 0.22 84.22);
+  --color-selective-yellow-600: oklch(0.94 0.17 86.07);
+  --color-selective-yellow-700: oklch(0.96 0.12 88.56);
+  --color-selective-yellow-800: oklch(0.98 0.07 90.06);
+  --color-selective-yellow-900: oklch(0.99 0.03 94.67);
+
+  /* TANGERINE */
+  --color-tangerine-100: oklch(0.22 0.13 63.36);
+  --color-tangerine-200: oklch(0.38 0.21 62.61);
+  --color-tangerine-300: oklch(0.54 0.25 65.60);
+  --color-tangerine-400: oklch(0.69 0.23 70.26);
+  --color-tangerine-500: oklch(0.84 0.22 72.80);
+  --color-tangerine-600: oklch(0.89 0.18 79.53);
+  --color-tangerine-700: oklch(0.93 0.13 83.38);
+  --color-tangerine-800: oklch(0.97 0.08 87.60);
+  --color-tangerine-900: oklch(0.99 0.04 92.19);
+
+  /* PERSIMMON */
+  --color-persimmon-100: oklch(0.17 0.12 37.56);
+  --color-persimmon-200: oklch(0.32 0.22 40.22);
+  --color-persimmon-300: oklch(0.47 0.27 42.14);
+  --color-persimmon-400: oklch(0.62 0.26 43.94);
+  --color-persimmon-500: oklch(0.77 0.27 44.96);
+  --color-persimmon-600: oklch(0.84 0.19 52.31);
+  --color-persimmon-700: oklch(0.90 0.12 61.86);
+  --color-persimmon-800: oklch(0.95 0.07 70.25);
+  --color-persimmon-900: oklch(0.98 0.03 83.21);
+
   @keyframes accordion-down {
     from {
       height: 0;
@@ -105,6 +160,8 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+
+  
 }
 
 /* .dark {
